codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__user_prompt_submit_app_server_hook_notifications_render_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: combined
---
• Running UserPromptSubmit hook: checking go-workflow input policy

• UserPromptSubmit hook (stopped)
  warning: go-workflow must start from PlanMode
  stop: prompt blocked
